# django-university

./: .gitignore  README.md  pyproject.toml  requirements.txt
djangouniversity/: asgi.py  settings.py  urls.py  wsgi.py
inscriptions/: models.py  serializers.py  tests.py  views.py
inscriptions/migrations/: 0001_initial.py  0002_alter_inscription_calification.py
students/: models.py  serializers.py  views.py
students/migrations/: 0001_initial.py
subjects/: models.py  serializers.py  views.py
subjects/migrations/: 0001_initial.py
teachers/: models.py  serializers.py  urls.py  views.py
teachers/migrations/: 0001_initial.py
users/: serializers.py  urls.py  views.py
